...
                            backgroundColor: Theme.of(context).colorScheme.primaryContainer,
                            foregroundColor: Theme.of(context).colorScheme.onPrimaryContainer,
                            padding: const EdgeInsets.symmetric(horizontal: 8),
                            minimumSize: const Size(0, 36),
                            tapTargetSize: MaterialTapTargetSize.shrinkWrap,
                          ),
                          child: const FittedBox(child: Text('Set Loop Start')),
                        ),
                        const SizedBox(width: 8),
                        ElevatedButton(
                          key: tutorialKeyLoopEnd,
                          onPressed: (state.activeLoop != null)
                              ? () => _onSetLoopEnd(context, state.activeLoop!)
...
                            backgroundColor: Theme.of(context).colorScheme.primaryContainer,
                            foregroundColor: Theme.of(context).colorScheme.onPrimaryContainer,
                            padding: const EdgeInsets.symmetric(horizontal: 8),
                            minimumSize: const Size(0, 36),
                            tapTargetSize: MaterialTapTargetSize.shrinkWrap,
                          ),
                          child: const FittedBox(child: Text('Set Loop End')),
                        ),
                        const Spacer(),
                        CupertinoSwitch(
                          key: tutorialKeyLoopActivate,
                          thumbIcon:
                              WidgetStateProperty.resolveWith<Icon?>((Set<WidgetState> states) {
...
        keyTarget: tutorialKeyWaveform,
        shape: ShapeLightFocus.RRect,
        radius: 8,
        contents: [
          TargetContent(
            builder: (context, controller) => TutorialItem(
              title: "Navigate through the song with dragging and dropping",
              content: "Use your fingers to drag and drop the whole song to the left or right",
              onNext: () => controller.next(),
            ),
          ),
        ],
      ),
...
